# fancy-sa-filemodel

./: README.md  TODO.md  pyproject.toml  requirements.txt  setup.cfg
example/: main.py  requirements.txt
src/fancy/sa/filemodel/: __init__.py  file.py  file_meta.py  file_model.py  operation.py  operation_context.py  storage.py  storage_manager.py
