[metadata]
name = fancy-sa-filemodel
version = 0.0.6
author = su-rin
author_email = susautw@gmail.com
description = A sqlalchemy extension to store files to various storage and maintain the data integrity.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/susautw/fancy-sa-filemodel
project_urls =
    Bug Tracker = https://github.com/susautw/fancy-sa-filemodel/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.9
install_requires =
    SQLAlchemy>=1.4.*

[options.packages.find]
where = src